/*
Copyright 2018-2022 Mailgun Technologies Inc

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
*/

syntax = "proto3";

option go_package = "github.com/mailgun/gubernator";

option cc_generic_services = true;

package gubernator.v3;

import "gubernator.proto";

message ForwardRequest {
    // Must specify at least one RateLimit. The peer that receives this request MUST be authoritative for
    // each rate_limit[x].unique_key provided, as the peer will not forward the request to any other peers
    repeated RateLimitRequest requests = 1;
}

message ForwardResponse {
    // Responses are in the same order as they appeared in the PeerRateLimitRequests
    repeated RateLimitResponse rate_limits = 1;
}

message UpdateRequest {
    // Must specify at least one RateLimit
    repeated UpdateRateLimit globals = 1;
}

message UpdateRateLimit {
    string key = 1;
    RateLimitResponse update = 2;
    Algorithm algorithm = 3;
}
